fixes grid spacing, adapts layout to bootstrap v5 adjust form layout to bootstrap v5

--- a/pgmanage/app/static/assets/js/pgmanage_frontend/src/assets/scss/components/modal.scss
+++ b/pgmanage/app/static/assets/js/pgmanage_frontend/src/assets/scss/components/modal.scss
@@ -94,7 +94,7 @@ $modalPadding: 24px;
     }
 
     &__list {
-        height: calc(100% - 67px);
+        height: calc(100% - 62px);
 
         @include themify() {
             border-right: themed($border);
@@ -124,7 +124,7 @@ $modalPadding: 24px;
     }
 
     &__forms  {
-        height: calc(100% - 67px);
+        height: calc(100% - 62px);
         padding: 16px 20px;
 
         .group-edit-form,  .connection-form {
